tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/serverfirst/tcp-server:ISTIO_MUTUAL/STRICT/_test_context/DestinationRule-PeerAuthentication.669558557.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-60257
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-60257
spec:
  mtls:
    mode: STRICT
  selector:
    matchLabels:
      app: c
